change parameters in header of ListObject into query parameters
